--- a/templates/meme_form.html
+++ b/templates/meme_form.html
@@ -2,6 +2,7 @@
 {% block title %}Meme Generator{% endblock %}
 {% block body %}
 <div class="card" style="width: 500px; max-width: 100%;">
+    <p class="text-center">{{message}}</p>
     <div class="card-body">
         <form action="{{url_for('meme_post')}}" method="POST">
             <div class="form-group">
